manifests/redis-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry-redis-slave
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      role: slave
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        role: slave
        app: redis
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      serviceAccountName: "default"
      containers:
      - name: sentry-redis
        image: docker.io/bitnami/redis:4.0.11-debian-9
        imagePullPolicy: "Always"
        ports:
        - name: redis
          containerPort: 6379
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
          exec:
            command:
            - redis-cli
            - ping
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 5
          exec:
            command:
            - redis-cli
            - ping
