manifests/redis-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry-redis-slave
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: redis
    role: slave
