manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentry-redis-master
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: redis
    role: master
