manifests/sentry-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sentry-ingress
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: sentry
            servicePort: 9000
